--- a/TODO.txt
+++ b/TODO.txt
@@ -2,5 +2,6 @@ TODO list
 ---------
 
 - add options to specify genome and annotation from command line
+- update usage docs
 - remove or change cluster configuration
 - remove tmp folder usage or add an option for it
