--- a/TODO
+++ b/TODO
@@ -3,3 +3,6 @@ TODO list
 
 - create template scripts for GEM-FLUX pipeline
 - create Docker images for STAR-RSEM	
+- add pipeline to CI server (circle)
+- use single pipeline.db file
+- use nextfow profiles and includeConfig
