--- a/TODO
+++ b/TODO
@@ -1,16 +1,17 @@
 # Things to do
 
-- fix RSEM single-end/paired-end for unstranded data
-- allow for custom arguments in tool templates
-- more flexible tool configuration
-- update RSEM version
-- fix issue with merge flag not being correctly set
-- replace unix sort with samtools in RSEM templates
-- use pipeline.db file and write on it asynchronously to allow for `tail -f`
-- move to github
-- add pipeline to CI server (circle)
-- integrate Kallisto, Sailfish and maybe other mappers
-- add preprocessing steps for input (fastq) and references (genome, annotation)
-- tune mapping steps for different quantification modes: only produce required bams
-- allow for custom options in templates
-- fix step file names, use merge field
+* fix RSEM single-end/paired-end for unstranded data
+* add `docker pull` command as `beforeScript` to config
+* allow for custom arguments in tool templates
+* more flexible tool configuration
+* update RSEM version
+* fix issue with merge flag not being correctly set
+* replace unix sort with samtools in RSEM templates
+* use pipeline.db file and write on it asynchronously to allow for `tail -f`
+* move to github
+* add pipeline to CI server (circle)
+* integrate Kallisto, Sailfish and maybe other mappers
+* add preprocessing steps for input (fastq) and references (genome, annotation)
+* tune mapping steps for different quantification modes: only produce required bams
+* allow for custom options in templates
+* fix step file names, use merge field
