Update todo list

--- a/TODO
+++ b/TODO
@@ -1,10 +1,12 @@
 # Things to do
 
+* add preprocessing steps for input (fastq) and references (genome, annotation)
+	- check chromosomes
+	- check mate ids
 * allow for custom arguments in tool templates
 * more flexible tool configuration
 * add `docker pull` command as `beforeScript` to config
 * move to github
 * add pipeline to CI server (circle)
 * integrate Kallisto, Sailfish and maybe other mappers
-* add preprocessing steps for input (fastq) and references (genome, annotation)
 * tune mapping steps for different quantification modes: only produce required bams
