--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,7 @@
 :nextflow-docs: http://www.nextflow.io/docs/latest/index.html
 :circle-shield: https://circleci.com/gh/guigolab/grape-nf.svg?style=shield
 
-image:{circle-shield}[]
+image:{circle-shield}["Circle CI", link="https://circleci.com/gh/guigolab/grape-nf"]
 
 Grape provides an extensive pipeline for RNA-Seq analyses. It allows the creation of an automated and integrated workflow to manage and analyse RNA-Seq data.
 
