--- a/docs/src/quickstart.adoc
+++ b/docs/src/quickstart.adoc
@@ -2,7 +2,7 @@
 :toc: left
 :sectnums:
 :icons: font
-:stylesheet: ../crg.css
+:stylesheet: ../css/crg.css
 :nf-web: http://nextflow.io
 :nf-docs: http://www.nextflow.io/docs/latest/index.html
 :nf-docs-sharing: http://www.nextflow.io/docs/latest/sharing.html
